Fix alignment of outside and inside icons.

--- a/client/app/thermo/components/heating-status/heating-status.component.scss
+++ b/client/app/thermo/components/heating-status/heating-status.component.scss
@@ -184,8 +184,8 @@
 }
 .thermo-inside--icon {
 	font-size: 2.8rem;
-	margin-top: 8px;
-	margin-bottom: 6px;
+	margin-top: 4px;
+	margin-bottom: 10px;
 }
 .thermo-outside--weather {
 	font-size: 3.1rem;
